--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,14 @@
   --title-resume: "Helvetica";
   --body: "Inter";
   --body-fallback: serif;
-}
 
-.background {
-  background-color: var(--white);
-}
-
-.page-wrapper {
+  /* set padding and max-width */
   padding: 0px 50px;
-  background-color: var(--white);
   max-width: 1100px;
-  margin: auto;
+}
+
+body {
+  background-color: var(--white);
 }
 
 /* customize appearance of text */
@@ -108,29 +105,65 @@ html {
   padding: 40px;
 }
 
-/* .home,
-.about {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
+.featured-link {
+  padding: 5px 10px;
+  border-radius: 30px;
+  max-width: max-content;
+  border: 1px solid var(--accent);
 }
 
-.fun {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
+.featured-link:hover {
+  background-color: var(--accent);
+  color: white;
 }
 
-.fun-main {
-  display: block;
-  font-size: 3rem;
-}
+@media screen and (max-width: 688px) {
+  :root {
+    padding: 0px;
+  }
 
-.fun-small {
-  display: block;
-  font-size: 1rem;
-} */
+  .mobile-body {
+    padding: 25px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+  
+  h2 {
+    font-size: 28px;
+  }
+  
+  h3 {
+    font-size: 20px;
+  }
+  
+  h4 {
+    font-size: 16px;
+  }
+  
+  h5 {
+    font-size: 12px;
+  }
+  
+  h6 {
+    font-size: 12px;
+  }
+  
+  p, li {
+    font-size: 10px;
+  }
+  
+  small {
+    font-size: 10px;
+  }
+
+  .divider {
+    padding: 5px;
+  }
+  
+  .divider-big {
+    padding: 20px;
+  }
+
+}
