--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -21,7 +21,7 @@
     background-color: var(--accent-light);
     border-radius: 0 10px 10px 0;
     -webkit-appearance: none;
-    box-shadow: calc(100vw/-3) 0 var(--accent-light);
+    box-shadow: calc(100vw / 3 * -1) 0 var(--accent-light);
     transition: box-shadow 750ms, background-color 750ms;
 }
 
